# advent_of_Code

./: .gitignore  README.md
2020/: x2020.cabal
2020/Day19/: CHANGELOG.md  Day19.cabal
2020/Day19/app/: Challenge.hs  Main.hs  input.txt  rules.txt  rules2.txt
2020/Day20/: x2020.cabal
2020/Day20/app/: Day20_1.hs  Day20_2.hs
2020/Day21/: x2020.cabal
2020/Day21/app/: Day21_1.hs  Day21_1_main.hs  Day21_example.txt
2020/Day21/lib/: Day211.hs
2020/Day21/test/: Spec.hs
2020/Day22/: x2020.cabal
2020/Day22/app/: Main.hs
2020/Day22/lib/: Day.hs
2020/Day22/test/: Spec.hs
2020/Day23/: x2020.cabal
2020/Day23/app/: Main.hs
2020/Day23/lib/: Circle.hs  Day.hs  Day2.hs
2020/Day23/test/: Spec.hs
2020/Day24/: CHANGELOG.md  Day24.cabal
2020/Day24/app/: Challenge1.hs  Main.hs
2020/Day24/test/: Challenge1Spec.hs
2020/Day25/: CHANGELOG.md  Day25.cabal
2020/Day25/app/: Challenge.hs  Main.hs
2020/app/: Day20_1.hs  Day20_2.hs  MatrixUtil.hs
2022/: day2.cabal
2022/app/: Day10_1.hs  Day10_2.hs  Day11_1.hs  Day11_2.hs  Day11_example_1.hs  Day12_breadth_first_1.hs  Day12_breadth_first_2.hs  Day12_depth_first.hs  Day13_1.hs  Day13_2.hs  Day13_input.txt  Day14_1.hs  Day1_1.hs  Day1_2.hs  Day2_1.hs  Day2_2.hs  Day3_1.hs  Day3_2.hs  Day4_1.hs  Day4_2.hs  Day5_1.hs  Day5_2.hs  Day6_1.hs  Day6_2.hs  Day7_1.hs  Day8_1.hs  Day8_2.hs  Day9_1.hs  Day9_2.hs  DayX_1.hs  MatrixUtil.hs
libraray/: CHANGELOG.md  LinkedStructures.cabal
libraray/src/: Circle.hs  DoubleLinkedList.hs  MatrixUtil.hs
libraray/test/: CircleSpec.hs  DoubleLinkedListSpec.hs
