cabal-version:      2.4
name:               x2020
version:            0.1.0.0

author:             Niklas Leopold
maintainer:         leopold.niklas@gmail.com

extra-source-files: CHANGELOG.md

executable x2020
    main-is:          Day20_2.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        split,
        containers,
        lens,
        parallel,
        vector,
        regex-tdfa
    hs-source-dirs:   app
    default-language: Haskell2010
