cabal-version:      2.4
name:               x2020
version:            0.1.0.0

author:             Niklas Leopold
maintainer:         leopold.niklas@gmail.com

extra-source-files: CHANGELOG.md

library day-lib
    exposed-modules: Day, Day2
    hs-source-dirs: lib
    build-depends:
        base ^>=4.17.2.0,
        split,
        containers,
        lens,
        parallel,
        vector,
        array,
        regex-tdfa
    default-language: Haskell2010


executable x2020
    main-is:          Main.hs
    other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        split,
        containers,
        lens,
        parallel,
        vector,
        regex-tdfa,
        day-lib
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
  build-depends:
      base ^>=4.17.2.0,
      test-framework,
      test-framework-hunit,
      HUnit,
      containers,
      day-lib
  hs-source-dirs:   test
  default-language: Haskell2010
