cabal-version:      2.4
name:               Day24
version:            0.1.0.0

author:             Niklas Leopold
maintainer:         leopold.niklas@gmail.com
extra-source-files: CHANGELOG.md

executable Day24
    main-is:          Main.hs
    other-modules:    Challenge1
    build-depends:
        base ^>=4.17.2.0,
        containers
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite Day24-tests
    type:             exitcode-stdio-1.0
    main-is:          Challenge1Spec.hs
    other-modules:    Challenge1
    build-depends:
        base ^>=4.17.2.0,
        hspec ^>=2.11,
        containers
    hs-source-dirs:   test, app    -- Include the app directory to find Challenge1
    default-language: Haskell2010
